# pcseditado

./: .clangd  .gitignore  CMakeLists.txt  README.md  adios2cfg.xml  build_cosma.sh  build_server.sh  cmake.sh  compass_artifact_wf-66503eb9-756c-5c5b-b05a-1aa4d7c4c21e_text_markdown.md  deploy_pauli.sh  diag.slurm  job_MSbM.sh  job_analysis_mirror_bimaxwellian_moderate_cosma7.sh  job_mirror_bikappa3_moderate.sh  plotmirro.py  psc_feynman.slurm  psc_mirror_max2k.slurm  psc_mirror_maxwellian_fisica.slurm  psc_mirror_maxwellian_max.slurm  psc_mirror_maxwellian_multi.slurm  psc_pauli.slurm
.github/workflows/: ci-psc-spack.yml  clang-format.yml  psc-cpu.yml
CodeforAnalisys/: ANALISIS_ESTRUCTURA.md  Makefile  README.md  REFACTOR_NOTES.md  aniso.py  anisotropy_analysis.py  check_resolution.py  compare_physical_cases.py  data_reader.py  diamagnetic_current.py  dispersion_analysis.py  fluctuationofmagneticfiel.py  generar_pdf_reporte.py  growth_rate_map.py  heat_flux_analysis.py  lite_instability_analysis.py  mirror_physics.py  physical_diagnostics.py  plot_moments_scatter_3d.py  plot_moments_validation.py  plot_prt.py  plot_vdf_3d.py  polarization_dispersion.py  psc_units.py  reconnection_analysis.py  requirements.txt  spectral_analysis.py  streaming_analysis.py  temperature_anisotropy_dispersion.py  test_dispersion_analysis.py  test_growth_rate_map.py  test_spectral_analysis.py  test_temperature_anisotropy_dispersion.py  validate_moments.py  write_analysis_manifest.py
CodeforAnalisys/downloads/F_S_bM_local/: F_S_bM_local_analysis_manifest.json
CodeforAnalisys/legacy/: README.md
CodeforAnalisysAdios2/: Makefile  README.md  REFACTOR_NOTES.md  data_reader.py  fluctuationofmagneticfiel.py  mirror_physics.py  particle_reader.py  plot_moments_scatter_3d.py  plot_prt.py  plot_vdf_3d.py  psc_units.py  spectral_analysis.py  validate_moments.py
analysis_results/F_S_bM_local/: F_S_bM_local_analysis_manifest.json
analysis_results/F_S_bM_local/04_spectra/: polarization_fft_parameters.json
analysis_results/F_S_bM_local/05_physical_diagnostics/: validation_summary.txt
analysis_results/F_S_bM_local/09_physical_diagnostics/: validation_summary.txt
analysis_results/full_lite_analysis_11496268/: download_summary.txt
analysis_results/mirror_bimaxwellian_moderate/: mirror_bimaxwellian_moderate_analysis_manifest.json
docs/: Makefile
presentation/: Makefile  README.md
scripts/: interactive_boltzmann.sh  purge_and_analyze.slurm  run_sim.slurm  submit_pipeline.sh
src/: .gitignore  ADIOS2_COSMA_RUNBOOK.md  CMakeLists.txt  REFACTOR_KAPPA.md  SIMULACIONES.md  SIMULACIONES_ANISOTROPIA.md  SIMULACIONES_ANISOTROPIA_BM.md  SIMULACIONES_INESTABILIDADES_TEMPERATURA_ANALISIS.md  SIMULACIONES_RECONNECTION.md  cleanup_restart_outputs.sh  cosma_adios2_env.sh  cosma_adios2_setup.sh  cosma_build_psc_adios2.sh  md_to_simple_pdf.py  psc_F_M_bM.cxx  psc_F_S_bM.cxx  psc_F_W_bM.cxx  psc_M_M_bM.cxx  psc_M_S_bM.cxx  psc_M_W_bM.cxx  psc_W_M_bM.cxx  psc_W_S_bM.cxx  psc_W_W_bM.cxx  psc_anisotropy_case.hxx  psc_anisotropy_lite.cxx  psc_firehose_bikappa3.cxx  psc_firehose_bikappa5.cxx  psc_firehose_bimaxwellian_moderate.cxx  psc_firehose_bimaxwellian_strong.cxx  psc_firehose_bimaxwellian_weak.cxx  psc_firehose_kappa.cxx  psc_firehose_kappa3.cxx  psc_firehose_kappa5.cxx  psc_firehose_light.cxx  psc_firehose_maxwellian.cxx  psc_firehose_server.cxx  psc_maxwellian.cxx  psc_mirror_bikappa3.cxx  psc_mirror_bikappa3_moderate.cxx  psc_mirror_bikappa5.cxx  (+32 more)
src/include/: OutputFieldsDefault.h  setup_particles.hxx  writer_adios2.hxx
src/kg/: CMakeLists.txt
src/kg/include/kg/io/: FileAdios2.h  FileAdios2.inl  IOAdios2.h  IOAdios2.inl
src/libpsc/psc_checks/: checks_impl.hxx
src/libpsc/tests/: test_mfields_io.cxx
(+20 files in other folders)
